# atomic

./: .env.example  .gitignore  LICENSE  README.md  install.sh  llm.py  main.py  package-lock.json  pyproject.toml  run.sh  tools.py
atomic/: config.py  download.py  llm.py  main.py  model_picker.py  permissions.py  tools.py
atomic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
