[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["llama-cpp-python", "rich", "prompt_toolkit"]

[project.scripts]
atomic = "atomic.main:run"

[tool.setuptools.packages.find]
where = ["."]
